src/app/[locale]/css/productDetails.scss
@import "@/app/variables.scss";

.productDetails{
    padding-top: 100px;
    padding-bottom: 0;
    margin: 0;
    width: 100%;
    height: 100vh;
    max-height: 100vh;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    overflow: hidden;

    @media screen and (max-width:768px) {
        padding-top: $mobile-padding-top;
        max-height: fit-content;
        height: fit-content;
      }

    /* h1{
        display: flex;
        align-items: center;
        justify-content: center;
        filter: drop-shadow(0 0 5px darken($main-grey,10%));
        height: 12%;
        margin: 0;
        @media screen and (max-width:768px) {
            height: fit-content;
            padding-block: 1rem;
        }
    } */

    .breadcrumbNav {
        width: 100%;
        color: darken($main-grey, 40%);
        font-size: 0.875rem;

        ol {
            list-style: none;
            display: flex;
            align-items: center;
            gap: 0.5rem;
            padding: 0;
            margin: 0;
            flex-wrap: wrap;
        }

        a {
            color: inherit;
            text-decoration: none;

            &:hover {
                text-decoration: underline;
            }
        }

        .breadcrumbSeparator {
            color: darken($main-grey, 20%);
        }
    }

    .headerContainer {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 12%;
        @media screen and (max-width:768px){
            justify-content: space-between;
            padding-block: 1rem;
        }
        .filter-icon {
            height: 100%;
            width: fit-content;
            display: grid;
            justify-items: center;
            cursor: pointer;
            padding-left: 1rem;
        }
        h1{
            padding: 0;
            margin: 0;
            filter: drop-shadow(0 0 1px darken($main-grey, 10%));
            @media screen and (max-width:768px) {
                height: fit-content;
            }
        }
    }

    .firstPart{
        width: 100%;
        height: 88%;
        max-height: 88%;
        display: flex;
        align-items: flex-start;
        justify-content: space-between;
        margin: 0;
        overflow: hidden;
        @media screen and (max-width:768px) {
            flex-direction: column;
        }

        .leftPart{
            width: 30%;
            height: 100%;
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            justify-content: flex-start;
            overflow: hidden;
            /* box-shadow: -10px 10px 15px -5px $main-grey; */

            @media screen and (max-width:768px) {
                width: 100%;
                height: 100%;
                min-height: 80%;
                max-height: 80%;
            }

            .imgContainer{
                width: 100%;
                height:100%;
                max-height: 80%;
                position: relative;
                img{
                    width: auto;
                    max-width: 100%;
                    height: 100%;
                    object-fit: contain;
                    filter: drop-shadow(0 10px 10px darken($main-grey,15%));
                }
            }
            .imgContainer:before{
                content: "";
                position: absolute;
                top: 0;
                left: 0;
                width: 100%;
                height: 100%;
                background-color:lighten($main-grey, 10%) ;
                background: linear-gradient(180deg,white,lighten($main-grey, 10%));
                clip-path: polygon(0 0, 100% 85%, 100% 100%, 0 100%, 0 50%);
            }
            .tags{
                width: 100%;
                height:100%;
                min-height: 20%;
                display: flex;
                flex-direction: column;
                justify-content: center;
                padding-inline: 1.5rem;
                padding-top: 1rem;
                padding-bottom: 1.5rem;
                background-color: lighten($main-grey, 10%) ;
                z-index: 1;

                @media screen and (max-width:768px) {
                    height: fit-content;
                    min-height: fit-content;
                    padding: 1rem;
                    
                }

                span{
                    font-weight: 600;
                    font-size: 1.2rem;
                    text-align: left;
                }
            }
        }

        .informationPart{
            width: 70%;
            height: 100%;
            display: flex;
            flex-direction: column;
            overflow: scroll;
            border: 1px solid lighten($main-grey, 10%);

            @media screen and (max-width:768px) {
                width: 100%;
                overflow: unset;
                min-height: 100%;
                height: fit-content;
            }

            .centerPart{
                width: 50%;
                height: 100%;
                margin-inline: auto;
                display: flex;
                flex-direction: column;
                align-items: flex-start;

                @media screen and (max-width:768px) {
                    width: 100%;
                    height: fit-content;
                }

                .description{
                    width: 100%;
                    height: fit-content;
                    text-align:justify;
                    padding: 1rem;
                    padding-block: 2rem;
                    padding-top: 1.5rem;
                    line-height: 1.8rem;
                }
                .areasOfUsage{
                    width: 100%;
                    height: fit-content;
                    text-align: left;
                    padding: 1rem;
                    h4{
                        text-transform: capitalize;
                        padding-bottom: .5rem;
                    }
                    /* background-color: lighten($main-grey, 10%) ; */
                    border-top: 2px solid  lighten($main-grey, 10%);
                    border-bottom: 2px solid  lighten($main-grey, 10%);
                }
                .featuresOfProduct{
                    width: 100%;
                    height: fit-content;
                    text-align: justify;
                    padding: 1rem;
                    padding-block: 2rem;
                    h4{
                        text-transform: capitalize;
                        padding-bottom: .5rem;
                    }
                }
                .imgContainer{
                    width: 100%;
                    height:auto;
                    margin-bottom: 2rem;
                    margin-top: 1rem;
                    box-shadow: 0 0 10px grey;
                    img{
                        width: 100%;
                        height: 100%;
                        object-fit: contain;
                    }
                }
            }

            .collapse-item{
                cursor: pointer;
                border: 1px solid black;
            }
            .collapse-content{
                p{
                    text-align: justify;
                }
            }

        }
    
    }

    .accordion{
        width: 100%;
        padding-bottom: 10rem;
        @media screen and (max-width:768px) {
            padding-bottom: 1rem;
        }
        .accordion-item {
            margin-block: 1rem;
            border: 1px solid $main-grey;
            border-radius: .2rem;
            overflow: hidden;
        }
        .accordion-button:focus{
            outline: none;
            box-shadow: none;
        }
        .accordion-button:not(.collapsed){
            background-color: rgba($logo-green,.05);
        }
        .accordion-header{
            h5{
                margin-bottom: 0;
                text-transform: capitalize;
            }
        }
        .accordion-body{
            text-align: justify;
            padding: 1rem;
        }
    }
}

